# actor

./: Cargo.toml  HARDWARE.rs  README.md  TODO.md  rustfmt.toml
actor/: Cargo.toml  build.rs
actor/src/: asr.rs  audioin.rs  audioout.rs  codec.rs  epoch.rs  history.rs  lib.rs  llm.rs  log.rs  onnx.rs  prompt.rs  slm.rs  spi.rs  st7789.rs  vad.rs  vec2.rs  wsserver.rs  xslm.rs
actor/src/asr/: asr.rs  decoder.rs  mod.rs  tokenizer.rs
actor/src/lcd/: mod.rs
actor/src/onnx/: mod.rs
actor/src/tts/: decoder.rs  encoder.rs  mod.rs  tokenizer.rs  tts.rs
data/: .gitignore
docs/plans/: 2026-03-06-xslm-module.md
macro/: Cargo.toml
macro/src/: lib.rs
webui/: analysis_options.yaml  pubspec.yaml
