[package]
name = "actor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = [
    "fancy-regex",
] }
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
hound = "3.5"
libpulse-binding = "2.28"
libpulse-simple-binding = "2.28"
tokio = { version = "1", features = [
    "fs",
    "rt",
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
] }
tokio-websockets = { version = "0.11", features = [
    "client",
    "server",
    "sha1_smol",
    "fastrand",
] }
rand = "0.8"
rand_distr = "0.4"
